tests/baselines/reference/newMissingIdentifier.errors.txt
==== tests/cases/compiler/newMissingIdentifier.ts (1 errors) ====
    var x = new ();
                 ~
!!! error TS1003: Identifier expected.
    